feat: add support for restyle, improve docs, solidify storybook support

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -18,11 +18,7 @@ import heroBackgroundImageURL from "../images/hero-background.png";
       <HeroTeaser>Edit `pages/index.mdx` to personalize homepage.</HeroTeaser>
       <HeroActionList>
         <HeroAction>
-          <Button
-            variant="neutral"
-            forwardedAs="a"
-            href="/docs/"
-          >
+          <Button variant="neutral" forwardedAs="a" href="/docs/">
             Browse Docs
           </Button>
         </HeroAction>
@@ -30,4 +26,3 @@ import heroBackgroundImageURL from "../images/hero-background.png";
     </HeroBody>
   </Hero>
 </HeroSection>
-
